--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,9 @@ npm-debug.log*
 
 # Dependency directory
 node_modules
-public
-build
-.eslintrc.js
+# public
+# build
+# .eslintrc.js
 
 # Optional npm cache directory
 .npm
