--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "mongoose": "^6.6.1"
   },
   "name": "express-mesto-gha",
-  "description": "[![Tests](https://github.com/yandex-praktikum/express-mesto-gha/actions/workflows/tests-13-sprint.yml/badge.svg)](https://github.com/yandex-praktikum/express-mesto-gha/actions/workflows/tests-13-sprint.yml) [![Tests](https://github.com/yandex-praktikum/express-mesto-gha/actions/workflows/tests-14-sprint.yml/badge.svg)](https://github.com/yandex-praktikum/express-mesto-gha/actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
+  "description": "[![Tests](https://github.com/Ne-skrooomnaya/express-mesto-gha/actions/workflows/tests-13-sprint.yml/badge.svg)](https://github.com/Ne-skrooomnaya/express-mesto-gha/actions/workflows/tests-13-sprint.yml) [![Tests](https://github.com/Ne-skrooomnaya/express-mesto-gha/actions/workflows/tests-14-sprint.yml/badge.svg)](https://github.com/Ne-skrooomnaya/express-mesto-gha/actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
   "version": "1.0.0",
   "main": "index.js",
   "devDependencies": {
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "dev": "nodemon app.js",
-    "start": "node app.js"
+    "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
