--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "scripts": {
     "dev": "nodemon app.js",
     "start": "node app.js",
+    "test": "echo \"Error: no test specified\" && exit 1",
     "lint": "eslint ./"
   },
   "repository": {
