--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.1",
+    "mongodb": "^4.10.0",
     "mongoose": "^6.6.1"
   },
   "name": "express-mesto-gha",
