--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,9 @@
-// {
-//   "parserOptions": {
-//       "ecmaVersion": "latest"
-//   },
+{
+  "parserOptions": {
+      "ecmaVersion": "latest"
+  },
 
-//   "env": {
-//       "es6": true
-//   }
-// }
+  "env": {
+      "es6": true
+  }
+}
