--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,33 @@
 {
-    "extends": "airbnb-base",
-    "rules": {
-      "no-underscore-dangle": [
-        "error",
-        {
-          "allow": ["_id"]
-        }
-      ]
+  "settings": {
+    "react": {
+      "version": "detect"
     }
+  },
+  "env": {
+      "browser": true,
+      "es2021": true
+  },
+  "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended",
+      "airbnb-base"
+  ],
+  "overrides": [
+  ],
+  "parserOptions": {
+      "ecmaVersion": "latest",
+      "sourceType": "module"
+  },
+  "plugins": [
+      "react"
+  ],
+  "rules": {
+    "no-underscore-dangle": [
+      "error",
+      {
+        "allow": ["_id"]
+      }
+    ]
   }
+}
