--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
   "dependencies": {
-    "eslint": "^8.24.0",
-    "eslint-config-airbnb-base": "^15.0.0",
-    "eslint-plugin-import": "^2.26.0",
     "express": "^4.18.1",
-    "mongodb": "^4.10.0",
     "mongoose": "^6.6.1"
   },
   "name": "express-mesto-gha",
-  "description": "[![Tests](https://github.com/Ne-skrooomnaya/express-mesto-gha/actions/workflows/tests-13-sprint.yml/badge.svg)](https://github.com/Ne-skrooomnaya/express-mesto-gha/actions/workflows/tests-13-sprint.yml) [![Tests](https://github.com/Ne-skrooomnaya/express-mesto-gha/actions/workflows/tests-14-sprint.yml/badge.svg)](https://github.com/Ne-skrooomnaya/express-mesto-gha/actions/workflows/tests-14-sprint.yml)\r # Проект Mesto фронтенд + бэкенд",
+  "description": "Репозиторий проекта",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.38.0",
+    "@typescript-eslint/parser": "^5.38.0",
+    "eslint": "^8.24.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.30.0",
     "nodemon": "^2.0.20"
   },
   "scripts": {
-    "dev": "nodemon app.js",
     "start": "node app.js",
+    "dev": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint ./"
+    "lint": "npx eslint ."
   },
   "repository": {
     "type": "git",
