--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 {
   "dependencies": {
     "express": "^4.18.1",
-    "mongoose": "^6.6.1"
+    "har-validator": "^5.1.5",
+    "mongoose": "^6.6.1",
+    "uuid": "^9.0.0"
   },
   "name": "express-mesto-gha",
   "description": "Репозиторий проекта",
