--- a/package.json
+++ b/package.json
@@ -1,21 +1,16 @@
 {
   "dependencies": {
     "express": "^4.18.1",
-    "har-validator": "^5.1.5",
-    "mongoose": "^6.6.1",
-    "uuid": "^9.0.0"
+    "mongoose": "^6.6.1"
   },
   "name": "express-mesto-gha",
   "description": "Репозиторий проекта",
   "version": "1.0.0",
   "main": "app.js",
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.38.0",
-    "@typescript-eslint/parser": "^5.38.0",
     "eslint": "^8.24.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-react": "^7.30.0",
     "nodemon": "^2.0.20"
   },
   "scripts": {
@@ -28,7 +23,7 @@
     "type": "git",
     "url": "git+https://github.com/Ne-skrooomnaya/express-mesto-gha.git"
   },
-  "author": "",
+  "author": "Ne-skrooomnaya",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Ne-skrooomnaya/express-mesto-gha/issues"
